service and about nav change

--- a/Service.html
+++ b/Service.html
@@ -7,10 +7,10 @@
     <title>Service</title>
     <link rel="stylesheet" href="Services.css">
     <link rel="stylesheet" href="header.css">
+
 </head>
 <body>
-    <div class="services">
-            <!-- header start -->
+    <!-- header start -->
     <header>
         <div class="log0">
             <img src="https://preview.colorlib.com/theme/sierra/img/logo.png" alt="">
@@ -28,6 +28,7 @@
         </div>
     </header>
     <!-- header end -->
+    <div class="services">
         <div class="service-home ">
             <div class="ser">
                 <h2>Services</h2>
@@ -103,11 +104,11 @@
                  ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum.
                   Nam convallis vel erat id dictum. Sed ut risus in orci convallis viverra a eget nisi. Aenean pellentesque elit vitae eros dignissim ultrices.
                 </p>
-         <ul>
-           <li>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis-</li> 
-           <li>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit.</li> 
-           <li>Sed dapibus nunc vulputate mi fringilla, eu consequat <span>+</span> </li> 
-           <li class="bt"> Curabitur eu libero sed erat viverra gravida at id ex <span>+</span></li>
+         <ul class="uls">
+           <li class="lis">Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis-</li> 
+           <li class="lis">Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit.</li> 
+           <li class="lis">Sed dapibus nunc vulputate mi fringilla, eu consequat <span>+</span> </li> 
+           <li class="bt lis"> Curabitur eu libero sed erat viverra gravida at id ex <span>+</span></li>
         </ul>
         </div>
     </div>
