--- a/Blog.html
+++ b/Blog.html
@@ -11,6 +11,7 @@
         <!-- icon link -->
         <link rel="stylesheet"
         href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+        <link rel="stylesheet" href="Blog.css">
     
         <!-- font link -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
