--- a/contact.html
+++ b/contact.html
@@ -1,78 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+       <!-- header start -->
+       <header>
+        <div class="log0">
+            <img src="https://preview.colorlib.com/theme/sierra/img/logo.png" alt="">
+        </div>
+
+        <div class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="Service.html">Service</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="Blog.html">Blog</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </header>
+    <!-- header end -->
     <div class="contact_us_2">
         <div class="responsive-container-block big-container">
-          <div class="blueBG">
-          </div>
-          <div class="responsive-container-block container">
-            <form class="form-box">
-              <div class="container-block form-wrapper">
-                <p class="text-blk contactus-head">
-                  Get in Touch
-                </p>
-                <p class="text-blk contactus-subhead">
-                  Nunc erat cursus tellus gravida.
-                </p>
-                <div class="responsive-container-block">
-                  <div class="responsive-cell-block wk-ipadp-6 wk-tab-12 wk-mobile-12 wk-desk-6" id="i10mt">
-                    <p class="text-blk input-title">
-                      FIRST NAME
-                    </p>
-                    <input class="input" id="ijowk" name="FirstName" placeholder="Please enter first name...">
-                  </div>
-                  <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
-                    <p class="text-blk input-title">
-                      LAST NAME
-                    </p>
-                    <input class="input" id="indfi" name="Last Name" placeholder="Please enter last name...">
-                  </div>
-                  <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
-                    <p class="text-blk input-title">
-                      EMAIL
-                    </p>
-                    <input class="input" id="ipmgh" name="Email" placeholder="Please enter email...">
-                  </div>
-                  <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
-                    <p class="text-blk input-title">
-                      PHONE NUMBER
-                    </p>
-                    <input class="input" id="imgis" name="PhoneNumber" placeholder="Please enter phone number...">
-                  </div>
-                  <div class="responsive-cell-block wk-tab-12 wk-mobile-12 wk-desk-12 wk-ipadp-12" id="i634i">
-                    <p class="text-blk input-title">
-                      WHAT DO YOU HAVE IN MIND
-                    </p>
-                    <textarea class="textinput" id="i5vyy" placeholder="Please enter query..."></textarea>
-                  </div>
-                </div>
-                <button class="submit-btn">
-                  Submit
-                </button>
-              </div>
-              <div class="social-media-links">
-                <a href="#" id="ix94i-2">
-                  <img class="link-img" src="https://workik-widget-assets.s3.amazonaws.com/Footer1-83/v1/images/Icon-twitter.png">
-                </a>
-                <a href="#">
-                  <img class="link-img" src="https://workik-widget-assets.s3.amazonaws.com/Footer1-83/v1/images/Icon-facebook.png">
-                </a>
-                <a href="#">
-                  <img class="link-img" src="https://workik-widget-assets.s3.amazonaws.com/Footer1-83/v1/images/Icon-google.png">
-                </a>
-                <a href="#" id="izldf-2">
-                  <img class="link-img" src="https://workik-widget-assets.s3.amazonaws.com/Footer1-83/v1/images/Icon-instagram.png">
-                </a>
-              </div>
-            </form>
-          </div>
+            <div class="blueBG">
+            </div>
+            <div class="responsive-container-block container">
+                <form class="form-box">
+                    <div class="container-block form-wrapper">
+                        <p class="text-blk contactus-head">
+                            Get in Touch
+                        </p>
+                        <p class="text-blk contactus-subhead">
+                            Nunc erat cursus tellus gravida.
+                        </p>
+                        <div class="responsive-container-block">
+                            <div class="responsive-cell-block wk-ipadp-6 wk-tab-12 wk-mobile-12 wk-desk-6" id="i10mt">
+                                <p class="text-blk input-title">
+                                    FIRST NAME
+                                </p>
+                                <input class="input" id="ijowk" name="FirstName"
+                                    placeholder="Please enter first name...">
+                            </div>
+                            <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
+                                <p class="text-blk input-title">
+                                    LAST NAME
+                                </p>
+                                <input class="input" id="indfi" name="Last Name"
+                                    placeholder="Please enter last name...">
+                            </div>
+                            <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
+                                <p class="text-blk input-title">
+                                    EMAIL
+                                </p>
+                                <input class="input" id="ipmgh" name="Email" placeholder="Please enter email...">
+                            </div>
+                            <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
+                                <p class="text-blk input-title">
+                                    PHONE NUMBER
+                                </p>
+                                <input class="input" id="imgis" name="PhoneNumber"
+                                    placeholder="Please enter phone number...">
+                            </div>
+                            <div class="responsive-cell-block wk-tab-12 wk-mobile-12 wk-desk-12 wk-ipadp-12" id="i634i">
+                                <p class="text-blk input-title">
+                                    WHAT DO YOU HAVE IN MIND
+                                </p>
+                                <textarea class="textinput" id="i5vyy" placeholder="Please enter query..."></textarea>
+                            </div>
+                        </div>
+                        <button class="submit-btn">
+                            Submit
+                        </button>
+                    </div>
+                    <div class="social-media-links">
+                        <a href="#" id="ix94i-2">
+                            <img class="link-img"
+                                src="https://workik-widget-assets.s3.amazonaws.com/Footer1-83/v1/images/Icon-twitter.png">
+                        </a>
+                        <a href="#">
+                            <img class="link-img"
+                                src="https://workik-widget-assets.s3.amazonaws.com/Footer1-83/v1/images/Icon-facebook.png">
+                        </a>
+                        <a href="#">
+                            <img class="link-img"
+                                src="https://workik-widget-assets.s3.amazonaws.com/Footer1-83/v1/images/Icon-google.png">
+                        </a>
+                        <a href="#" id="izldf-2">
+                            <img class="link-img"
+                                src="https://workik-widget-assets.s3.amazonaws.com/Footer1-83/v1/images/Icon-instagram.png">
+                        </a>
+                    </div>
+                </form>
+            </div>
         </div>
-      </div>
+    </div>
 </body>
+
 </html>
