contact footer add

--- a/contact.html
+++ b/contact.html
@@ -102,6 +102,45 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="footer">
+        
+                <div class="log">
+                    <img src="https://preview.colorlib.com/theme/sierra/img/footer-logo.png" alt="">
+                    <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum.</p>
+                </div>
+
+             
+            <div class="f-image">
+                <h2>Instagram</h2>
+                <img src="https://preview.colorlib.com/theme/sierra/img/instagram/ins-1.jpg" alt="">
+                <img src="https://preview.colorlib.com/theme/sierra/img/instagram/ins-2.jpg" alt="">
+                <img src="https://preview.colorlib.com/theme/sierra/img/instagram/ins-3.jpg" alt="">
+                <img src="https://preview.colorlib.com/theme/sierra/img/instagram/ins-4.jpg" alt="">
+                <img src="https://preview.colorlib.com/theme/sierra/img/instagram/ins-5.jpg" alt="">
+                <img src="https://preview.colorlib.com/theme/sierra/img/instagram/ins-6.jpg" alt="">
+            </div>
+
+            <div class="f-contact">
+                <h2>Subscribe to newsletter</h2>
+                <input type="text" placeholder="Your email address">
+                <button class="btn">Suscribe</button>
+            </div>
+        </div>
+
+        <div class="last">
+            <div class="l2">
+                COPYRIGHT ©2023 ALL RIGHTS RESERVED | THIS TEMPLATE IS MADE WITH  BY COLORLIB
+            </div>
+            <div class="l">
+                <i class='bx bxl-facebook-circle'></i>
+                <i class='bx bxl-facebook-circle'></i>
+                <i class='bx bxl-facebook-circle'></i>
+                <i class='bx bxl-facebook-circle'></i>
+                <i class='bx bxl-facebook-circle'></i>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
