--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                 <li><a href="about.html">About us</a></li>
                 <li><a href="Service.html">Service</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#blog">Blog</a></li>
+                <li><a href="Blog.html">Blog</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
