--- a/Service.html
+++ b/Service.html
@@ -26,7 +26,7 @@
                 <li><a href="Service.html">Service</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="Blog.html">Blog</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </header>
