--- a/about.html
+++ b/about.html
@@ -7,13 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="header.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"> -->
 
 </head>
 <body>
        <!-- header start -->
-         <!-- header start -->
-    <header>
+       <header>
         <div class="log0">
             <img src="https://preview.colorlib.com/theme/sierra/img/logo.png" alt="">
         </div>
@@ -23,14 +22,15 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="Service.html">Service</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="Blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </header>
-    <!-- header end -->
-    <!-- header end -->
+         <!-- header start -->
+
+   
     <div class="about">
         <div class="first-section">
             <div class="A-slider">
