--- a/contact.html
+++ b/contact.html
@@ -28,80 +28,51 @@
         </div>
     </header>
     <!-- header end -->
-    <div class="contact_us_2">
-        <div class="responsive-container-block big-container">
-            <div class="blueBG">
-            </div>
-            <div class="responsive-container-block container">
-                <form class="form-box">
-                    <div class="container-block form-wrapper">
-                        <p class="text-blk contactus-head">
-                            Get in Touch
-                        </p>
-                        <p class="text-blk contactus-subhead">
-                            Nunc erat cursus tellus gravida.
-                        </p>
-                        <div class="responsive-container-block">
-                            <div class="responsive-cell-block wk-ipadp-6 wk-tab-12 wk-mobile-12 wk-desk-6" id="i10mt">
-                                <p class="text-blk input-title">
-                                    FIRST NAME
-                                </p>
-                                <input class="input" id="ijowk" name="FirstName"
-                                    placeholder="Please enter first name...">
-                            </div>
-                            <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
-                                <p class="text-blk input-title">
-                                    LAST NAME
-                                </p>
-                                <input class="input" id="indfi" name="Last Name"
-                                    placeholder="Please enter last name...">
-                            </div>
-                            <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
-                                <p class="text-blk input-title">
-                                    EMAIL
-                                </p>
-                                <input class="input" id="ipmgh" name="Email" placeholder="Please enter email...">
-                            </div>
-                            <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
-                                <p class="text-blk input-title">
-                                    PHONE NUMBER
-                                </p>
-                                <input class="input" id="imgis" name="PhoneNumber"
-                                    placeholder="Please enter phone number...">
-                            </div>
-                            <div class="responsive-cell-block wk-tab-12 wk-mobile-12 wk-desk-12 wk-ipadp-12" id="i634i">
-                                <p class="text-blk input-title">
-                                    WHAT DO YOU HAVE IN MIND
-                                </p>
-                                <textarea class="textinput" id="i5vyy" placeholder="Please enter query..."></textarea>
-                            </div>
-                        </div>
-                        <button class="submit-btn">
-                            Submit
-                        </button>
-                    </div>
-                    <div class="social-media-links">
-                        <a href="#" id="ix94i-2">
-                            <img class="link-img"
-                                src="https://workik-widget-assets.s3.amazonaws.com/Footer1-83/v1/images/Icon-twitter.png">
-                        </a>
-                        <a href="#">
-                            <img class="link-img"
-                                src="https://workik-widget-assets.s3.amazonaws.com/Footer1-83/v1/images/Icon-facebook.png">
-                        </a>
-                        <a href="#">
-                            <img class="link-img"
-                                src="https://workik-widget-assets.s3.amazonaws.com/Footer1-83/v1/images/Icon-google.png">
-                        </a>
-                        <a href="#" id="izldf-2">
-                            <img class="link-img"
-                                src="https://workik-widget-assets.s3.amazonaws.com/Footer1-83/v1/images/Icon-instagram.png">
-                        </a>
-                    </div>
-                </form>
-            </div>
+   <br>
+    <!--  -->
+    <div class="fifth-section" id="contact">
+     
+        <div class="form">
+            <h2 style="margin-left: 20px;">Get in touch</h2>
+            <form action="">
+                <input type="text" name="name" placeholder="Name">
+                <input type="text" name="email" placeholder="Email"><br>
+                <input type="text" name="subject" placeholder="Subject *">
+                <br>
+                <textarea name="text-area" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <button class="btn" style="margin-left: 106px; ">Submit</button>
+            </form>
+        </div>
+
+        <div class="contact">
+            <img src="https://preview.colorlib.com/theme/sierra/img/icon/title-icon.png" alt="">
+            <p class="prg">SAY HELLO</p>
+            <h1>Get in touch, send us an emil or call us</h1>
+            <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel
+                suscipit dolor. Donec elementum velit a orci facilisis rutrum.</p>
+            <h2>Call Us</h2>
+            <a href="tel: +997 0158239">+997-010234248</a>
         </div>
     </div>
+
+    <div class="six-section">
+        <img src="https://preview.colorlib.com/theme/sierra/img/world-map.png" alt="">
+        <div class="contant">
+            <div class="cont">
+                <p> Casemates Square, no253<br>
+                </p>
+                <p> United kingdom </p>
+
+            </div>
+            <div class="num">
+                <p> +453678 9283 559</p>
+                <p> contact@template.com</p>
+            </div>
+
+
+        </div>
+    </div>
+
     <footer>
         <div class="footer">
         
