--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<title>index</title>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,7 +31,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="Service.html">Service</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="Blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -100,74 +100,6 @@
                 </div>
             </div>
 
-            <div class="third-section">
-                <div class="third1">
-                    <h2>They are the best</h2>
-                    <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit.
-                        Etiam nec odio vestibul.Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc
-                        nec maximus dui, vel suscipit dolor.
-                    <div class="th">
-                        <div class="im">
-                            <img src="https://preview.colorlib.com/theme/sierra/img/team/people/people-5.jpg" alt="">
-                        </div>
-                        <div class="pr">
-                            <p>Chrissa Turner</p>
-                            CEO Enterprose
-                        </div>
-                    </div>
-                </div>
-
-                <div class="third2">
-                    <div class="img">
-                        <img src="https://preview.colorlib.com/theme/sierra/img/icon/title-icon.png" alt="">Home
-                    </div>
-                    <p>DISCOVER THE FEATURES</p>
-                    <h2>We don’t hide, we<br> stand tall in front of <br>chalenge</h2>
-                    <p class="pr">Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus
-                        blandit. Etiam nec odio vestibul.Cras ex mauris, ornare eget pretium sit amet, dignissim et
-                        turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum.
-                        Nam convallis vel erat id dictum. Sed ut risus in orci convallis viverra a eget nisi. Aenean
-                        pellentesque elit vitae eros dignissim ultrices.</p>
-                </div>
-
-                <div class="third3">
-                    <img src="https://preview.colorlib.com/theme/sierra/img/iphone4.png" alt="">
-                </div>
-            </div>
-
-            <div class="fourth-container">
-                <div class="fourth-1">
-                    <div class="img">
-                        <img src="https://preview.colorlib.com/theme/sierra/img/icon/title-icon.png" alt="">
-                    </div>
-                    <div class="f-p">Discovered The FEatures</div>
-                    <h2>We Buidl a Strong team <br> of great people.</h2>
-                    <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel
-                        suscipit dolor. Donec elementum velit a orci facilisis rutrum. Nam convallis vel erat id dictum.
-                        Sed ut risus in orci convallis viverra.
-                    </p>
-                    <div class="list">
-                        <ol>
-                            <li>Nunc nec maximus dui,</li>
-                            <li>Aenean pellentesque elit vitae</li>
-                            <li>Cras ex mauris, ornare eget preti</li>
-                        </ol>
-                        <ul>
-                            <li>Aenean pellentesque elit vitae</li>
-                            <li>Ex mauris, ornare eget pretium</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="fourth-2">
-                    <div class="images">
-                        <img src="https://preview.colorlib.com/theme/sierra/img/team/people/people-1.jpg" alt="">
-                        <img src="https://preview.colorlib.com/theme/sierra/img/team/people/people-2.jpg" alt="">
-                        <img src="https://preview.colorlib.com/theme/sierra/img/team/people/people-3.jpg" alt="">
-                        <img src="https://preview.colorlib.com/theme/sierra/img/team/people/people-4.jpg" alt="">
-                    </div>
-                </div>
-            </div>
 
          
             <footer>
