--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="Service.html">Service</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="Blog.html">Blog</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
