--- a/Service.html
+++ b/Service.html
@@ -129,13 +129,14 @@
 
     <footer>
         <div class="footer">
-        
-                <div class="log">
-                    <img src="https://preview.colorlib.com/theme/sierra/img/footer-logo.png" alt="">
-                    <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum.</p>
-                </div>
 
-             
+            <div class="log">
+                <img src="https://preview.colorlib.com/theme/sierra/img/footer-logo.png" alt="">
+                <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit
+                    dolor. Donec elementum velit a orci facilisis rutrum.</p>
+            </div>
+
+
             <div class="f-image">
                 <h2>Instagram</h2>
                 <img src="https://preview.colorlib.com/theme/sierra/img/instagram/ins-1.jpg" alt="">
@@ -155,7 +156,7 @@
 
         <div class="last">
             <div class="l2">
-                COPYRIGHT ©2023 ALL RIGHTS RESERVED | THIS TEMPLATE IS MADE WITH  BY COLORLIB
+                COPYRIGHT ©2023 ALL RIGHTS RESERVED | THIS TEMPLATE IS MADE WITH BY COLORLIB
             </div>
             <div class="l">
                 <i class='bx bxl-facebook-circle'></i>
