Portfolio, blog and Contact Banner

--- a/Blog.html
+++ b/Blog.html
@@ -38,6 +38,12 @@
         </div>
     </header>
     <!-- header end -->
+    <div class="service-home ">
+        <div class="ser">
+            <h2>Blog</h2>
+            <p> we do best</p>
+        </div>
+    </div>
     <div class="foot">
         <div class="service-last">
             <img src="https://preview.colorlib.com/theme/sierra/img/icon/title-icon.png" alt="">
