--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Services.css">
 </head>
 
 <body>
@@ -30,6 +31,12 @@
     <!-- header end -->
    <br>
     <!--  -->
+    <div class="service-home ">
+        <div class="ser">
+            <h2>Contact</h2>
+            <p>Get in touch, send us an emil or call us</p>
+        </div>
+    </div>
     <div class="fifth-section" id="contact">
      
         <div class="form">
