--- a/Blog.html
+++ b/Blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SIERRA Website</title>
+    <title>Blog/SIERRA Website</title>
     
 <!-- title image link -->
 <link rel="icon" type="image/png" href="https://preview.colorlib.com/theme/sierra/img/logo.png">
