--- a/Service.html
+++ b/Service.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Service</title>
+    <title>Service/SIERRA Website</title>
+
     <link rel="stylesheet" href="Services.css">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="style.css">
