--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>index</title>
+    <title>Index/SIERRA Website</title>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SIERRA Website</title>
+    <title>Index/SIERRA Website</title>
     <link rel="stylesheet" href="style.css">
     <!-- title image link -->
     <link rel="icon" type="image/png" href="https://preview.colorlib.com/theme/sierra/img/logo.png">
