all Header Section are REsponsive

--- a/Blog.html
+++ b/Blog.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog/SIERRA Website</title>
+    <link rel="stylesheet" href="Responsie.css">
     
 <!-- title image link -->
 <link rel="icon" type="image/png" href="https://preview.colorlib.com/theme/sierra/img/logo.png">
@@ -49,7 +50,7 @@
             <img src="https://preview.colorlib.com/theme/sierra/img/icon/title-icon.png" alt="">
             <h2>DISCOVER THE FEATURES</h2>
             <h1>Simple solutions for <br> complicated times</h1>
-            <p>Etiam nec odio vestibulum est mattis effic iturut magna.
+            <p class="pr">Etiam nec odio vestibulum est mattis effic iturut magna.
                 Pellentesque sit am et tellus blandit. Etiam nec odio vestibul.Cras ex mauris,
                 ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec
                 elementum velit a orci facilisis rutrum.
