--- a/Service.html
+++ b/Service.html
@@ -6,32 +6,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Service/SIERRA Website</title>
+    <link rel="stylesheet" href="Responsie.css">
 
     <link rel="stylesheet" href="Services.css">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="style.css">
-
+   
+<link rel="stylesheet" href="header.css">
 </head>
+<style>
+    @media screen and (max-width: 768px) {
+    /* Header part start */
+    .navbar li{
+        padding: 20px 7px;
+    }
+    .navbar li a{
+        font-size: 20px;
+    }
+    /* Header part end */
 
+
+
+    /* Footer part start */
+    .footer{
+        padding: 10px 20px;
+    }
+    .f-image{
+        display: none;
+    }
+    .log img{
+        width: 230px;
+    }
+    .log p{
+        font-size: 20px;
+    }
+    .f-contact{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    /* Footer part end */
+ 
+  }
+</style>
 <body>
-    <!-- header start -->
-    <header>
-        <div class="log0">
-            <img src="https://preview.colorlib.com/theme/sierra/img/logo.png" alt="">
-        </div>
+  <!-- header start -->
+  <header>
+    <div class="log0">
+        <img src="https://preview.colorlib.com/theme/sierra/img/logo.png" alt="">
+    </div>
 
-        <div class="navbar">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About us</a></li>
-                <li><a href="Service.html">Service</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="Blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </div>
-    </header>
-    <!-- header end -->
+    <div class="navbar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About us</a></li>
+            <li><a href="Service.html">Service</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="Blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </div>
+</header>
+<!-- header end -->
     <div class="services">
         <div class="service-home ">
             <div class="ser">
@@ -44,21 +79,21 @@
             <div class="service-contant">
                 <img src="https://preview.colorlib.com/theme/sierra/img/icon/f-icon-1.png" alt="">
                 <h2>Brand Identity</h2>
-                <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam
+                <p class="par">Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam
                     nec odio vestibul.</p>
                 <div class="btns">Read More</div>
             </div>
             <div class="service-contant">
                 <img src="https://preview.colorlib.com/theme/sierra/img/icon/f-icon-1.png" alt="">
                 <h1>Brand Identity</h1>
-                <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam
+                <p class="par">Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam
                     nec odio vestibul.</p>
                 <div class="btns">Read More</div>
             </div>
             <div class="service-contant">
                 <img src="https://preview.colorlib.com/theme/sierra/img/icon/f-icon-1.png" alt="">
                 <h2>Brand Identity</h2>
-                <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam
+                <p class="par">Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam
                     nec odio vestibul.</p>
                 <div class="btns">Read More</div>
             </div>
@@ -68,21 +103,21 @@
             <div class="service-contant">
                 <img src="https://preview.colorlib.com/theme/sierra/img/icon/f-icon-1.png" alt="">
                 <h2>Brand Identity</h2>
-                <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam
+                <p class="par">Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam
                     nec odio vestibul.</p>
                 <div class="btns">Read More</div>
             </div>
             <div class="service-contant">
                 <img src="https://preview.colorlib.com/theme/sierra/img/icon/f-icon-1.png" alt="">
                 <h1>Brand Identity</h1>
-                <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam
+                <p class="par">Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam
                     nec odio vestibul.</p>
                 <div class="btns">Read More</div>
             </div>
             <div class="service-contant">
                 <img src="https://preview.colorlib.com/theme/sierra/img/icon/f-icon-1.png" alt="">
                 <h2>Brand Identity</h2>
-                <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam
+                <p class="par">Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam
                     nec odio vestibul.</p>
                 <div class="btns">Read More</div>
             </div>
@@ -109,7 +144,7 @@
                 <img src="https://preview.colorlib.com/theme/sierra/img/icon/title-icon.png" alt="">
                 <h2>DISCOVER THE FEATURES</h2>
                 <h1>Simple solutions for <br> complicated times</h1>
-                <p>Etiam nec odio vestibulum est mattis effic iturut magna.
+                <p class="pr">Etiam nec odio vestibulum est mattis effic iturut magna.
                     Pellentesque sit am et tellus blandit. Etiam nec odio vestibul.Cras ex mauris,
                     ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec
                     elementum velit a orci facilisis rutrum.
