--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="header.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="Responsie.css">
 
 </head>
 <body>
@@ -73,7 +74,7 @@
 
                 <div class="profile">
                     <img src="https://preview.colorlib.com/theme/sierra/img/testimonials/testi-1.jpg" alt="">
-                    <p><span>Rahul</span><br>CEO Enterprise </p>
+                    <p><span>Rahul</span><br><br>CEO Enterprise </p>
                 </div>
             </div>
 
