--- a/portfolio.html
+++ b/portfolio.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio/SIERRA Website</title>
-
+<link rel="stylesheet" href="Responsie.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="Services.css">
 </head>
 <body>
-     <!-- header start -->
-     <header>
+       <!-- header start -->
+       <header>
         <div class="log0">
             <img src="https://preview.colorlib.com/theme/sierra/img/logo.png" alt="">
         </div>
